[package]
name = "min-cancel-token"
version = "0.1.0"
edition = "2018"
authors = ["Matthias Einwag <matthias.einwag@live.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Matthias247/min-cancel-token"
homepage = "https://github.com/Matthias247/min-cancel-token"
description = """
A cancellation token interface and implementation
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = "0.3"
